// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessor accessor object exists 1`] = `
Object {
  "initialiseStore": [Function],
  "resetEmail": [Function],
  "setEmail": [Function],
  "submodule": Object {
    "foo": Object {
      "setFoo": [Function],
    },
    "initialise": [Function],
    "setFirstName": [Function],
    "setLastName": [Function],
    "setName": [Function],
  },
}
`;

exports[`accessor store exists 1`] = `
Object {
  "actions": Object {
    "resetEmail": [Function],
  },
  "getters": Object {
    "email": [Function],
    "fullEmail": [Function],
  },
  "modules": Object {
    "submodule": Object {
      "actions": Object {
        "initialise": [Function],
        "setName": [Function],
      },
      "getters": Object {
        "fullName": [Function],
      },
      "modules": Object {
        "foo": Object {
          "mutations": Object {
            "setFoo": [Function],
          },
          "namespaced": true,
          "state": Object {
            "foo": "bar",
          },
        },
      },
      "mutations": Object {
        "setFirstName": [Function],
        "setLastName": [Function],
      },
      "namespaced": true,
      "state": [Function],
    },
  },
  "mutations": Object {
    "initialiseStore": [Function],
    "setEmail": [Function],
  },
  "state": [Function],
}
`;
